hphp/test/slow/dv_array/hh-only2.php.expectf

Fatal error: syntax error, unexpected ',', expecting ']' in %s/hh-only2.php on line 4
